--- a/Demo/Twitch_Sentiment_analysis.ipynb
+++ b/Demo/Twitch_Sentiment_analysis.ipynb
@@ -6,10 +6,13 @@
    "source": [
     "# Sentiment analysis with TensorFlow\n",
     "\n",
+    "* Github Link: https://github.com/thushv89/manning_tf2_in_action/tree/demo/twitch\n",
+    "\n",
     "\n",
     "## [TensorFlow 2 in Action ](https://www.manning.com/books/tensorflow-in-action)\n",
     "\n",
     "* Link: https://www.manning.com/books/tensorflow-in-action\n",
+    "* Link (Github): https://github.com/thushv89/manning_tf2_in_action\n",
     "\n",
     "### Topics covered:\n",
     "\n",
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -420,6 +423,24 @@
    "metadata": {},
    "source": [
     "## Preprocessing the text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?:herself | his | has | after | you'll | that'll | me | hers | that | be | few | during | by | theirs | were | through | off | most | a | her | here | on | up | under | against | nor | into | isn | shan't | weren't | there | any | re | o | i | other | myself | who | hadn't | doing | both | did | or | you've | my | when | t | what | couldn | doesn't | and | but | do | haven't | with | again | don | why | then | ours | yourselves | which | she's | hadn | you'd | of | very | at | didn't | ve | out | should've | how | an | had | couldn't | below | ourselves | once | all | ma | more | this | further | where | aren't | does | in | down | d | whom | shouldn't | yourself | should | itself | am | needn't | being | we | can | him | about | ain | these | only | y | haven | she | their | your | having | each | needn | is | so | it | mustn't | shouldn | wasn't | won't | have | don't | now | was | will | m | because | are | some | they | mightn't | its | you're | to | doesn | those | before | yours | himself | our | shan | if | isn't | same | wouldn | while | themselves | s | until | for | wasn | them | he | ll | hasn | won | between | you | over | didn | own | been | above | weren | mustn | hasn't | aren | than | too | as | the | mightn | such | it's | from | just | wouldn't)\n"
+     ]
+    }
+   ],
+   "source": [
+    "stopwords_regex = \"(?:\" + \" | \".join(EN_STOPWORDS) + \")\"\n",
+    "print(stopwords_regex)"
    ]
   },
   {
@@ -782,6 +803,7 @@
     "## [TensorFlow 2 in Action ](https://www.manning.com/books/tensorflow-in-action)\n",
     "\n",
     "* Link: https://www.manning.com/books/tensorflow-in-action\n",
+    "* Link (Github): https://github.com/thushv89/manning_tf2_in_action\n",
     "\n",
     "### Topics covered:\n",
     "\n",
@@ -1069,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1096,13 +1118,13 @@
      "text": [
       "Epoch 1\n",
       "\tEvaluating...\n",
-      "346/346 [==============================] - 5s 15ms/step - loss: 0.4111 - accuracy: 0.8119\n",
+      "346/346 [==============================] - 5s 16ms/step - loss: 0.4050 - accuracy: 0.8168\n",
       "Epoch 2\n",
       "\tEvaluating...\n",
-      "346/346 [==============================] - 5s 15ms/step - loss: 0.4304 - accuracy: 0.8134\n",
+      "346/346 [==============================] - 5s 15ms/step - loss: 0.4709 - accuracy: 0.7924\n",
       "Epoch 3\n",
       "\tEvaluating...\n",
-      "346/346 [==============================] - 5s 15ms/step - loss: 0.4357 - accuracy: 0.8073\n"
+      "346/346 [==============================] - 5s 16ms/step - loss: 0.4307 - accuracy: 0.8119\n"
      ]
     }
    ],
@@ -1147,10 +1169,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "346/346 [==============================] - 9s 26ms/step - loss: 0.4308 - accuracy: 0.8134\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.4308243989944458, 0.8134382367134094]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(ts_x_pad, ts_y)"
+   ]
   },
   {
    "attachments": {},
@@ -1160,6 +1202,7 @@
     "## [TensorFlow 2 in Action ](https://www.manning.com/books/tensorflow-in-action)\n",
     "\n",
     "* Link: https://www.manning.com/books/tensorflow-in-action\n",
+    "* Link (Github): https://github.com/thushv89/manning_tf2_in_action\n",
     "\n",
     "### Topics covered:\n",
     "\n",
