Refactoring Ch09 to 9 and 10. Fixed bug in masking layer in sentiment analysis. Added evaluation to language modelling

--- a/Ch10/Language_modelling.ipynb
+++ b/Ch10/Language_modelling.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -299,29 +299,29 @@
       "\t3-grams: ['I l', 'ike', ' ch', 'oco', 'lat', 'es']\n",
       "\n",
       "Sample of most-common bigrams\n",
-      "e     455237\n",
-      " t    345305\n",
-      "he    310813\n",
-      "d     308382\n",
-      "th    284134\n",
-      " a    268079\n",
-      "t     257842\n",
-      "s     228193\n",
-      " h    192680\n",
-      " s    183000\n",
+      "e     455292\n",
+      " t    344971\n",
+      "he    310539\n",
+      "d     308390\n",
+      "th    284425\n",
+      " a    268496\n",
+      "t     257788\n",
+      "s     227961\n",
+      " h    192544\n",
+      " s    182830\n",
       "dtype: int64\n",
       "\n",
-      "Median: 128.5\n",
+      "Median: 136.5\n",
       "\n",
-      "count      1080.000000\n",
-      "mean      12039.712963\n",
-      "std       36270.245525\n",
+      "count      1074.000000\n",
+      "mean      12106.919926\n",
+      "std       36358.817692\n",
       "min           1.000000\n",
       "25%           5.000000\n",
-      "50%         128.500000\n",
-      "75%        6344.000000\n",
-      "90%       34142.700000\n",
-      "max      455237.000000\n",
+      "50%         136.500000\n",
+      "75%        6406.750000\n",
+      "90%       34184.600000\n",
+      "max      455292.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of vocabulary: 743\n"
+      "Size of vocabulary: 735\n"
      ]
     }
    ],
@@ -437,27 +437,27 @@
      "text": [
       "Original: the yellow fairy book the cat and the mouse in par\n",
       "n-grams: ['th', 'e ', 'ye', 'll', 'ow', ' f', 'ai', 'ry', ' b', 'oo', 'k ', 'th', 'e ', 'ca', 't ', 'an', 'd ', 'th', 'e ', 'mo', 'us', 'e ', 'in', ' p', 'ar']\n",
-      "Word ID sequence: [6, 2, 215, 54, 84, 35, 95, 146, 26, 97, 123, 6, 2, 128, 8, 15, 5, 6, 2, 147, 114, 2, 17, 65, 52]\n",
+      "Word ID sequence: [6, 2, 216, 55, 85, 35, 95, 146, 26, 97, 123, 6, 2, 128, 8, 15, 5, 6, 2, 147, 114, 2, 17, 65, 52]\n",
       "\n",
       "\n",
       "Original: chapter i. down the rabbit-hole alice was beginnin\n",
       "n-grams: ['ch', 'ap', 'te', 'r ', 'i.', ' d', 'ow', 'n ', 'th', 'e ', 'ra', 'bb', 'it', '-h', 'ol', 'e ', 'al', 'ic', 'e ', 'wa', 's ', 'be', 'gi', 'nn', 'in']\n",
-      "Word ID sequence: [93, 207, 57, 19, 545, 47, 84, 18, 6, 2, 126, 344, 38, 400, 136, 2, 70, 142, 2, 66, 9, 71, 218, 251, 17]\n",
+      "Word ID sequence: [93, 206, 57, 19, 544, 47, 85, 18, 6, 2, 126, 343, 39, 402, 136, 2, 70, 140, 2, 66, 9, 71, 218, 251, 17]\n",
       "\n",
       "\n",
       "Original: a patent medicine testimonial `` you might as well\n",
       "n-grams: ['a ', 'pa', 'te', 'nt', ' m', 'ed', 'ic', 'in', 'e ', 'te', 'st', 'im', 'on', 'ia', 'l ', '``', ' y', 'ou', ' m', 'ig', 'ht', ' a', 's ', 'we', 'll']\n",
-      "Word ID sequence: [60, 179, 57, 78, 33, 31, 142, 17, 2, 57, 50, 125, 43, 266, 56, 122, 92, 29, 33, 152, 149, 7, 9, 103, 54]\n",
+      "Word ID sequence: [60, 182, 57, 78, 33, 31, 140, 17, 2, 57, 49, 125, 43, 266, 56, 122, 92, 29, 33, 151, 149, 7, 9, 102, 55]\n",
       "\n",
       "\n",
       "Original: mowgli 's brothers now rann the kite brings home t\n",
       "n-grams: ['mo', 'wg', 'li', \" '\", 's ', 'br', 'ot', 'he', 'rs', ' n', 'ow', ' r', 'an', 'n ', 'th', 'e ', 'ki', 'te', ' b', 'ri', 'ng', 's ', 'ho', 'me', ' t']\n",
-      "Word ID sequence: [147, 513, 74, 46, 9, 203, 99, 4, 134, 58, 84, 79, 15, 18, 6, 2, 190, 57, 26, 89, 37, 9, 73, 63, 3]\n",
+      "Word ID sequence: [147, 513, 74, 46, 9, 203, 99, 4, 134, 58, 85, 79, 15, 18, 6, 2, 191, 57, 26, 89, 37, 9, 73, 63, 3]\n",
       "\n",
       "\n",
       "Original: i jimmy skunk is puzzled old mother west wind had \n",
       "n-grams: ['i ', 'ji', 'mm', 'y ', 'sk', 'un', 'k ', 'is', ' p', 'uz', 'zl', 'ed', ' o', 'ld', ' m', 'ot', 'he', 'r ', 'we', 'st', ' w', 'in', 'd ', 'ha', 'd ']\n",
-      "Word ID sequence: [87, 388, 308, 21, 274, 117, 123, 48, 65, 474, 494, 31, 24, 98, 33, 99, 4, 19, 103, 50, 13, 17, 5, 30, 5]\n",
+      "Word ID sequence: [87, 390, 308, 21, 274, 116, 123, 48, 65, 474, 496, 31, 24, 98, 33, 99, 4, 19, 102, 49, 12, 17, 5, 30, 5]\n",
       "\n",
       "\n"
      ]
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,9 +497,8 @@
     "    if shuffle:\n",
     "        text_ds = text_ds.shuffle(buffer_size=len(data_seq)//2)\n",
     "    \n",
-    "    # This function will create windows from data, given a window size and a stride\n",
-    "    # Each window is a single entity\n",
-    "    #text_ds = text_ds.flat_map(lambda x: tf.data.Dataset.from_tensor_slices(x).window(n_seq+1,shift=stride)) \n",
+    "    # This function will create windows from data, given a window size and a shift\n",
+    "    # Each window is a single entity    \n",
     "    \n",
     "    # windows function create neted dataset within text ds\n",
     "    # This is a special trick we use to unwrap those nested structures\n",
@@ -659,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +774,7 @@
    "source": [
     "## Training the model\n",
     "\n",
-    "Here we're going to train the model. To keep the training shorter, we will only use 50/98 storings in the training set. We will also generate sequences at a stride of 25."
+    "Here we're going to train the model. To keep the training shorter, we will only use 50/98 storings in the training set. We will also generate sequences at a shift of 25."
    ]
   },
   {
@@ -831,8 +830,8 @@
     }
    ],
    "source": [
-    "train_ds = get_tf_pipeline(train_data_seq[:50], n_seq, stride=25, batch_size=128)\n",
-    "valid_ds = get_tf_pipeline(val_data_seq, n_seq, stride=n_seq, batch_size=128)\n",
+    "train_ds = get_tf_pipeline(train_data_seq[:50], n_seq, shift=25, batch_size=128)\n",
+    "valid_ds = get_tf_pipeline(val_data_seq, n_seq, shift=n_seq, batch_size=128)\n",
     "\n",
     "os.makedirs('eval', exist_ok=True)\n",
     "\n",
@@ -873,6 +872,42 @@
     "t2 = time.time()\n",
     "\n",
     "print(\"It took {} seconds to complete the training\".format(t2-t1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating the model (test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61/61 [==============================] - 2s 39ms/step - loss: 2.2620 - accuracy: 0.4574 - perplexity: 10.5495\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2.2619853019714355, 0.457405149936676, 10.549492835998535]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size = 128\n",
+    "test_ds = get_tf_pipeline(test_data_seq, n_seq, shift=n_seq, batch_size=batch_size)\n",
+    "model.evaluate(test_ds)"
    ]
   },
   {
