Added lambda layer to correct the shape before masking

--- a/Ch09/Sentiment_analysis.ipynb
+++ b/Ch09/Sentiment_analysis.ipynb
@@ -384,7 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/thushv89/anaconda3/envs/manning.tf2/lib/python3.6/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "c:\\anaconda3\\envs\\manning.tf2\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -475,9 +475,7 @@
      "text": [
       "Before clean: She sells seashells by the seashore.\n",
       "After clean: ['sell', 'seashell', 'seashore']\n",
-      "\n",
-      "Processing all the review data ... This can take a long time (~ 1hr)\n",
-      "\tDone\n"
+      "Data already found. If you want to rerun anyway, set rerun=True\n"
      ]
     }
    ],
@@ -576,7 +574,7 @@
      "text": [
       "Actual: Worked perfectly on Wii and Gamecube.\n",
       "No issues with compatibility or loss of memory.\n",
-      "Clean: ['work', 'perfectly', 'wii', 'gamecube', 'no', 'issue', 'compatibility', 'loss', 'memory']\n",
+      "Clean: ['work', 'perfectly', 'wii', 'gamecube', 'issue', 'compatibility', 'loss', 'memory']\n",
       "\n",
       "\n",
       "Actual: Loved the game and the other collectibles that came with it are well made.  The mask is big and it almost fits my face so that was impressive.\n",
@@ -621,7 +619,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122143    [work, perfectly, wii, gamecube, no, issue, co...\n",
+      "122143    [work, perfectly, wii, gamecube, issue, compat...\n",
       "444818    [loved, game, collectible, come, well, make, m...\n",
       "79331     ['s, okay, game, honest, bad, type, game, --, ...\n",
       "97250                        [excellent, product, describe]\n",
@@ -784,25 +782,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "game     408827\n",
+      "game     408819\n",
       "not      248729\n",
-      "play     128848\n",
+      "play     128822\n",
       "'s       128200\n",
-      "get      109008\n",
-      "like     100429\n",
-      "great     97005\n",
+      "get      109001\n",
+      "like     100426\n",
+      "great     97007\n",
       "one       90214\n",
       "good      77356\n",
-      "time      63460\n",
+      "time      63470\n",
       "dtype: int64\n",
-      "count    133743.000000\n",
-      "mean         76.079862\n",
-      "std        1758.439494\n",
+      "count    133714.000000\n",
+      "mean         75.768207\n",
+      "std        1754.508881\n",
       "min           1.000000\n",
       "25%           1.000000\n",
       "50%           1.000000\n",
       "75%           4.000000\n",
-      "max      408827.000000\n",
+      "max      408819.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -852,9 +850,9 @@
     {
      "data": {
       "text/plain": [
-       "count    278581.000000\n",
-       "mean         15.463524\n",
-       "std          16.278175\n",
+       "count    278675.000000\n",
+       "mean         15.422596\n",
+       "std          16.258732\n",
        "min           1.000000\n",
        "33%           5.000000\n",
        "50%          10.000000\n",
@@ -902,7 +900,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using a vocabulary of size: 11888\n"
+      "Using a vocabulary of size: 11884\n"
      ]
     }
    ],
@@ -996,23 +994,23 @@
      "output_type": "stream",
      "text": [
       "Text: ['work', 'perfectly', 'wii', 'gamecube', 'issue', 'compatibility', 'loss', 'memory']\n",
-      "Sequence: [14, 296, 84, 572, 122, 1975, 2224, 346]\n",
+      "Sequence: [14, 295, 83, 572, 121, 1974, 2223, 345]\n",
       "\n",
       "\n",
       "Text: ['loved', 'game', 'collectible', 'come', 'well', 'make', 'mask', 'big', 'almost', 'fit', 'face', 'impressive']\n",
-      "Sequence: [1593, 2, 2033, 33, 24, 16, 2345, 154, 201, 156, 600, 1133]\n",
+      "Sequence: [1592, 2, 2031, 32, 23, 16, 2345, 153, 200, 155, 599, 1133]\n",
       "\n",
       "\n",
       "Text: [\"'s\", 'okay', 'game', 'honest', 'bad', 'type', 'game', '--', \"'s\", 'difficult', 'always', 'die', 'depresses', 'maybe', 'skill', 'would', 'enjoy', 'game']\n",
-      "Sequence: [5, 575, 2, 1265, 106, 198, 2, 113, 5, 275, 151, 355, 1, 291, 401, 19, 68, 2]\n",
+      "Sequence: [5, 574, 2, 1264, 105, 197, 2, 112, 5, 274, 150, 354, 1, 290, 400, 19, 67, 2]\n",
       "\n",
       "\n",
       "Text: ['excellent', 'product', 'describe']\n",
-      "Sequence: [110, 56, 502]\n",
+      "Sequence: [109, 55, 501]\n",
       "\n",
       "\n",
       "Text: ['level', 'detail', 'great', 'feel', 'love', 'car', 'game']\n",
-      "Sequence: [61, 420, 8, 43, 13, 266, 2]\n",
+      "Sequence: [60, 419, 8, 42, 13, 265, 2]\n",
       "\n",
       "\n"
      ]
@@ -1097,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,44 +1149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[1 2 0]\n",
-      " [1 2 3]], shape=(2, 3), dtype=int32)\n",
-      "\ty= tf.Tensor([0 0], shape=(2,), dtype=int32)\n",
-      "\n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[   3    2    6  543    2 3243    2  134   52   23    0]\n",
-      " [   3   32   21    3    2    4  134   45    1    1   45]], shape=(2, 11), dtype=int32)\n",
-      "\ty= tf.Tensor([0 0], shape=(2,), dtype=int32)\n",
-      "\n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[  2   4 214  21   0   0   0   0]\n",
-      " [  3   4  42   7   3   2  45  52]], shape=(2, 8), dtype=int32)\n",
-      "\ty= tf.Tensor([1 0], shape=(2,), dtype=int32)\n",
-      "\n",
-      "\n",
-      "tf.Tensor(\n",
-      "[[2 3 6 4 5]\n",
-      " [2 0 9 7 0]], shape=(2, 5), dtype=int32)\n",
-      "\ty= tf.Tensor([1 1], shape=(2,), dtype=int32)\n",
-      "\n",
-      "\n",
-      "tf.Tensor([[1]], shape=(1, 1), dtype=int32)\n",
-      "\ty= tf.Tensor([0], shape=(1,), dtype=int32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = [[1,2],[1],[1,2,3], [2,3,6,4,5],[2,0,9,7],[2,4,214,21],[3,4,42,7,3,2,45,52],[3,2,6,543,2,3243,2,134,52,23],[3,32,21,3,2,4,134,45,1,1,45]]\n",
     "y = [0,0,0, 1, 1, 1, 0, 0, 0]\n",
@@ -1276,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1287,11 +1250,13 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
+      "lambda (Lambda)              (None, None, 1)           0         \n",
+      "_________________________________________________________________\n",
       "masking (Masking)            (None, None, 1)           0         \n",
       "_________________________________________________________________\n",
-      "onehot_encoder (OnehotEncode (None, None, 11888)       0         \n",
+      "onehot_encoder (OnehotEncode (None, None, 11884)       0         \n",
       "_________________________________________________________________\n",
-      "lstm (LSTM)                  (None, 128)               6152704   \n",
+      "lstm (LSTM)                  (None, 128)               6150656   \n",
       "_________________________________________________________________\n",
       "dense (Dense)                (None, 512)               66048     \n",
       "_________________________________________________________________\n",
@@ -1299,8 +1264,8 @@
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 1)                 513       \n",
       "=================================================================\n",
-      "Total params: 6,219,265\n",
-      "Trainable params: 6,219,265\n",
+      "Total params: 6,217,217\n",
+      "Trainable params: 6,217,217\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1322,12 +1287,12 @@
     "    def call(self, inputs):        \n",
     "        \n",
     "        inputs = tf.cast(inputs, 'int32')\n",
+    "        \n",
     "        if len(inputs.shape) == 3:\n",
-    "            return tf.one_hot(inputs[:,:,0], depth=self.depth)\n",
-    "        elif len(inputs.shape) == 2:\n",
-    "            return tf.one_hot(inputs, depth=self.depth)\n",
-    "        else:\n",
-    "            raise ValueError(\"Inputs need to be 2 or 3 dimensional. Got {}\".format(len(inputs.shape)))\n",
+    "            inputs = inputs[:,:,0]\n",
+    " \n",
+    "        return tf.one_hot(inputs, depth=self.depth)\n",
+    "\n",
     "            \n",
     "    def compute_mask(self, inputs, mask=None):\n",
     "        return mask\n",
@@ -1347,8 +1312,9 @@
     "#     max_seq_length, batch_size, data_size, seq_lengths_array, (void*)&padding_fill\n",
     "# )'\n",
     "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Lambda(lambda x: tf.expand_dims(x, axis=-1), input_shape=(None,)),\n",
     "    # Create a mask to mask out zero inputs\n",
-    "    tf.keras.layers.Masking(mask_value=0, input_shape=(None,1)),\n",
+    "    tf.keras.layers.Masking(mask_value=0),\n",
     "    # After creating the mask, convert inputs to onehot encoded inputs\n",
     "    OnehotEncoder(depth=n_vocab),\n",
     "    # Defining an LSTM layer\n",
