More changes to BERT (cleaning up code)

--- a/Ch11/Spam_Classification_with_BERT.ipynb
+++ b/Ch11/Spam_Classification_with_BERT.ipynb
@@ -531,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the optimizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -549,6 +556,13 @@
     "# creates an optimizer with learning rate schedule\n",
     "optimizer = nlp.optimization.create_optimizer(\n",
     "    2e-6, num_train_steps=num_train_steps, num_warmup_steps=warmup_steps)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finetuning BERT and the classifier"
    ]
   },
   {
