Fixed minor issues in the spam classification notebook (added testing logic, fixed input encoding issue). Removed ODSC content

--- a/Ch11/Spam_Classification_with_BERT.ipynb
+++ b/Ch11/Spam_Classification_with_BERT.ipynb
@@ -9,28 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\anaconda3\\envs\\manning.tf2\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:68: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.2.0 and strictly below 2.4.0 (nightly versions are not supported). \n",
-      " The versions of TensorFlow you are currently using is 2.4.1 and is not supported. \n",
-      "Some things might work, some things might not.\n",
-      "If you were to encounter a bug, do not file an issue.\n",
-      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
-      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
-      "https://github.com/tensorflow/addons\n",
-      "  UserWarning,\n"
+      "TensorFlow: 2.4.1 installed\n",
+      "Warning: random module is not imported. Setting the seed for random failed.\n"
      ]
     }
    ],
@@ -38,6 +25,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
+    "import numpy as np\n",
     "from official import nlp\n",
     "from official.nlp import bert\n",
     "import official.nlp.optimization\n",
@@ -113,7 +101,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The zip file already exists.\n",
+      "The extracted data already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Downloading the data\n",
+    "# http://www.thespermwhale.com/jaseweston/babi/CBTest.tgz\n",
+    "\n",
+    "import os\n",
+    "import requests\n",
+    "import zipfile\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "if not os.path.exists('data'):\n",
+    "    os.mkdir('data')\n",
+    "        \n",
+    "# Retrieve the data\n",
+    "if not os.path.exists(os.path.join('data', 'smsspamcollection.zip')):\n",
+    "    url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip\"\n",
+    "    # Get the file from web\n",
+    "    r = requests.get(url)\n",
+    "    \n",
+    "    # Write to a file\n",
+    "    with open(os.path.join('data', 'smsspamcollection.zip'), 'wb') as f:\n",
+    "        f.write(r.content)\n",
+    "          \n",
+    "else:\n",
+    "    print(\"The zip file already exists.\")\n",
+    "    \n",
+    "if not os.path.exists(os.path.join('data', 'SMSSpamCollection')):\n",
+    "    with zipfile.ZipFile(os.path.join('data', 'smsspamcollection.zip'), 'r') as zip_ref:\n",
+    "        zip_ref.extractall('data')  \n",
+    "else:\n",
+    "    print(\"The extracted data already exists\")\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -126,6 +164,8 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# Inputs and labels will be stored in this\n",
     "inputs = []\n",
     "labels = []\n",
@@ -169,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +232,8 @@
     }
    ],
    "source": [
-    "from imblearn.under_sampling import OneSidedSelection, NearMiss, RandomUnderSampler\n",
-    "import numpy as np\n",
+    "from imblearn.under_sampling import  NearMiss, RandomUnderSampler\n",
+    "\n",
     "\n",
     "n=100 # Number of instances for each class for train/validation sets\n",
     "rus = RandomUnderSampler(sampling_strategy={0:n, 1:n}, random_state=random_seed)\n",
@@ -225,14 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5174, 8314)\n",
       "1    547\n",
       "0    547\n",
       "dtype: int64\n"
@@ -280,13 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow_hub as hub\n",
     "\n",
-    "model = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\")"
+    "bert_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\"\n",
+    "bert_layer = hub.KerasLayer(bert_url)"
    ]
   },
   {
@@ -304,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -341,20 +381,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'C:\\\\Users\\\\thush\\\\AppData\\\\Local\\\\Temp\\\\tfhub_modules\\\\ce53fe6769d2ac3a260e92555120c54e1aecbea6\\\\assets\\\\vocab.txt'\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import official.nlp.bert.tokenization as tokenization\n",
     "\n",
     "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+    "print(vocab_file)\n",
     "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+    "print(do_lower_case)\n",
     "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -427,33 +478,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def encode_sentence(s):\n",
+    "    \"\"\" Encode a given sentence by tokenizing it and adding special tokens \"\"\"\n",
+    "    \n",
+    "    tokens = ['[CLS]'] + list(tokenizer.tokenize(s)) + ['[SEP]']\n",
+    "    return tokenizer.convert_tokens_to_ids(tokens)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1094.000000\n",
+       "mean       33.248629\n",
+       "std        19.922181\n",
+       "min         9.000000\n",
+       "25%        15.000000\n",
+       "50%        22.000000\n",
+       "75%        53.000000\n",
+       "90%        60.000000\n",
+       "max        76.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq_lengths = pd.Series([len(encode_sentence(str(s))) for s in train_x])\n",
+    "seq_lengths.describe(percentiles=[0.25, 0.5, 0.75, 0.9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1094, None)\n",
-      "(1094, 80)\n",
-      "(200, None)\n",
-      "(200, 80)\n",
-      "(200, None)\n",
-      "(200, 80)\n"
+      "Shape of the ragged input: (1094, None)\n",
+      "Shape of the transformed input: (1094, 60)\n",
+      "Shape of the ragged input: (200, None)\n",
+      "Shape of the transformed input: (200, 60)\n",
+      "Shape of the ragged input: (200, None)\n",
+      "Shape of the transformed input: (200, 60)\n"
      ]
     }
    ],
    "source": [
-    "def encode_sentence(s):\n",
-    "   tokens = list(tokenizer.tokenize(s))\n",
-    "   tokens.append('[SEP]')\n",
-    "   return tokenizer.convert_tokens_to_ids(tokens)\n",
-    "\n",
-    "\n",
     "def get_bert_inputs(docs,max_seq_len=None):\n",
     "    \"\"\" Generate inputs for BERT using a set of documents \"\"\"\n",
     "    \n",
@@ -480,9 +561,9 @@
     "        'input_type_ids': tokens_type\n",
     "    }\n",
     "\n",
-    "train_inputs = get_bert_inputs(train_x, max_seq_len=80)\n",
-    "valid_inputs = get_bert_inputs(valid_x, max_seq_len=80)\n",
-    "test_inputs = get_bert_inputs(test_x, max_seq_len=80)\n",
+    "train_inputs = get_bert_inputs(train_x, max_seq_len=60)\n",
+    "valid_inputs = get_bert_inputs(valid_x, max_seq_len=60)\n",
+    "test_inputs = get_bert_inputs(test_x, max_seq_len=60)\n",
     "    "
    ]
   },
@@ -495,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -504,16 +585,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attention_dropout_rate': 0.1, 'dropout_rate': 0.1, 'hidden_activation': 'gelu', 'hidden_size': 768, 'initializer_range': 0.02, 'intermediate_size': 3072, 'max_position_embeddings': 512, 'num_attention_heads': 12, 'num_layers': 12, 'type_vocab_size': 2, 'vocab_size': 30522}\n",
-      "<official.nlp.bert.configs.BertConfig object at 0x0000020D91F67160>\n"
+      "BERT Config\n",
+      "<official.nlp.bert.configs.BertConfig object at 0x0000021612E2E6A0>\n"
      ]
     }
    ],
    "source": [
-    "#bert_config = bert.configs.BertConfig.from_dict(config_dict)\n",
+    "from official.nlp import bert\n",
     "import yaml\n",
-    "\n",
-    "hub_path_bert = 'C:\\\\Users\\\\thush\\\\Documents\\\\code\\\\manning_tf2_in_action\\\\tf_hub\\\\ce53fe6769d2ac3a260e92555120c54e1aecbea6'\n",
     "\n",
     "# https://github.com/tensorflow/models/blob/master/official/nlp/configs/models/bert_en_uncased_base.yaml\n",
     "with open(os.path.join(\"data\", \"bert_en_uncased_base.yaml\"), 'r') as stream:\n",
@@ -526,7 +605,7 @@
     "# Generating a classifier and the encoder\n",
     "hub_classifier, hub_encoder = bert.bert_models.classifier_model(\n",
     "    # Caution: Most of `bert_config` is ignored if you pass a hub url.\n",
-    "    bert_config=bert_config, hub_module_url=hub_path_bert, num_labels=2\n",
+    "    bert_config=bert_config, hub_module_url=bert_url, num_labels=2\n",
     ")\n"
    ]
   },
@@ -539,16 +618,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up epochs and steps\n",
     "epochs = 3\n",
     "batch_size = 64\n",
-    "eval_batch_size = 32\n",
+    "eval_batch_size = 64\n",
     "\n",
-    "train_data_size = train_seq_pad.shape[0]\n",
+    "train_data_size = train_x.shape[0]\n",
     "steps_per_epoch = int(train_data_size / batch_size)\n",
     "num_train_steps = steps_per_epoch * epochs\n",
     "warmup_steps = int(epochs * train_data_size * 0.1 / batch_size)\n",
@@ -567,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -576,20 +655,20 @@
      "text": [
       "\n",
       "Epoch 1/3\n",
-      "18/18 [==============================] - 699s 38s/step - loss: 0.6845 - accuracy: 0.5075 - val_loss: 0.6313 - val_accuracy: 0.8350\n",
+      "18/18 [==============================] - 544s 29s/step - loss: 0.7082 - accuracy: 0.4555 - val_loss: 0.6764 - val_accuracy: 0.5150\n",
       "Epoch 2/3\n",
-      "18/18 [==============================] - 674s 37s/step - loss: 0.5947 - accuracy: 0.8431 - val_loss: 0.5753 - val_accuracy: 0.8750\n",
+      "18/18 [==============================] - 518s 29s/step - loss: 0.6645 - accuracy: 0.6589 - val_loss: 0.6480 - val_accuracy: 0.8150\n",
       "Epoch 3/3\n",
-      "18/18 [==============================] - 668s 37s/step - loss: 0.5348 - accuracy: 0.9714 - val_loss: 0.5601 - val_accuracy: 0.8600\n"
+      "18/18 [==============================] - 518s 29s/step - loss: 0.6414 - accuracy: 0.7608 - val_loss: 0.6391 - val_accuracy: 0.8550\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x20df18e29b0>"
+       "<tensorflow.python.keras.callbacks.History at 0x216b64bd0b8>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,16 +682,51 @@
     "    loss=loss,\n",
     "    metrics=metrics)\n",
     "\n",
-    "\n",
-    "print()\n",
     "# np.concatenate([(train_y==0).reshape(-1,1), (train_y==1).reshape(-1,1)], axis=1).astype('int32'),\n",
     "hub_classifier.fit(\n",
-    "      train_inputs, \n",
-    "      train_y,\n",
+    "      x=train_inputs, \n",
+    "      y=train_y,\n",
     "      validation_data=(valid_inputs, valid_y),\n",
-    "    validation_batch_size=eval_batch_size,\n",
+    "      validation_batch_size=eval_batch_size,\n",
     "      batch_size=batch_size,\n",
     "      epochs=epochs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('models', exist_ok=True)\n",
+    "tf.keras.models.save_model(hub_classifier, os.path.join('models', 'bert_spam.h5'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 22s 3s/step - loss: 0.6432 - accuracy: 0.7950\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.6432445049285889, 0.7950000166893005]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hub_classifier.evaluate(test_inputs, test_y)"
    ]
   },
   {
